<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_m"
    android:paddingRight="@dimen/margin_m"
    android:background="@color/grey_light"
    tools:context="com.sitao.playground.HomeFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/title_home_section1" />

            <include
                android:id="@+id/t1"
                layout="@layout/tile_large" />

            <TextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/title_home_section2" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/section2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <TextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/title_home_section3" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/section3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <!--
                         <include
                        android:id="@+id/r1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_m"
                        layout="@layout/tile" />
                    -->
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/title_home_section4" />

            <include
                android:id="@+id/p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_l"
                layout="@layout/tile_large" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>